--- a/ekstrakurikuler/tik.html
+++ b/ekstrakurikuler/tik.html
@@ -42,9 +42,9 @@
     <a class="skip-link" href="#main">Lewati ke konten utama</a>
     <header class="site-header" id="top">
       <div class="container nav-wrap">
-        <a href="../index.html#home" class="logo" aria-label="Beranda SDN Kiduldalem I Bangil">
-          <span class="logo-mark" aria-hidden="true">SD</span>
-          <span class="logo-text">Nusantara</span>
+        <a href="../index.html#home" class="logo" aria-label="Beranda SDN KIDULDALEM I BANGIL">
+          <img class="logo-img" src="../assets/img/logosd.png" alt="Logo SDN KIDULDALEM I BANGIL" onerror="this.onerror=null;this.src='../assets/img/placeholder.svg';" />
+          <span class="logo-text">SDN KIDULDALEM I BANGIL</span>
         </a>
         <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Buka menu">
           <span class="bar"></span>
