--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <a class="skip-link" href="#main">Lewati ke konten utama</a>
     <header class="site-header" id="top">
       <div class="container nav-wrap">
-        <a href="#top" class="logo" aria-label="Beranda SDN KIDULDALEM I BANGIL">
-          <img class="logo-img" src="assets/img/logosd.png" alt="SDN KIDULDALEM I BANGIL" onerror="this.onerror=null;this.src='assets/img/placeholder.svg';" />
+        <a href="#home" class="logo" aria-label="Beranda SDN KIDULDALEM I BANGIL">
+          <img class="logo-img" src="assets/img/logosd.png" alt="Logo SDN KIDULDALEM I BANGIL" onerror="this.onerror=null;this.src='assets/img/placeholder.svg';" />
+          <span class="logo-text">SDN KIDULDALEM I BANGIL</span>
         </a>
         <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Buka menu">
           <span class="bar"></span>
