--- a/kegiatan/juara-karate-koni.html
+++ b/kegiatan/juara-karate-koni.html
@@ -13,7 +13,8 @@
     <header class="site-header" id="top">
       <div class="container nav-wrap">
         <a href="../index.html#home" class="logo" aria-label="Beranda SDN KIDULDALEM I BANGIL">
-          <img class="logo-img" src="../assets/img/logosd.png" alt="SDN KIDULDALEM I BANGIL" onerror="this.onerror=null;this.src='../assets/img/placeholder.svg';" />
+          <img class="logo-img" src="../assets/img/logosd.png" alt="Logo SDN KIDULDALEM I BANGIL" onerror="this.onerror=null;this.src='../assets/img/placeholder.svg';" />
+          <span class="logo-text">SDN KIDULDALEM I BANGIL</span>
         </a>
         <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Buka menu">
           <span class="bar"></span><span class="bar"></span><span class="bar"></span>
@@ -50,7 +51,7 @@
               <img src="../assets/img/juarakarate.jpg" onerror="this.onerror=null;this.src='../assets/img/karate.svg';" alt="Foto siswa peraih Juara 2 Karate Piala KONI" style="display:block; width:70%; max-width:360px; height:auto; border:1px solid var(--border); border-radius:.75rem; background:var(--surface);" />
             </figure>
 
-            <div style="font-size:1.15rem; line-height:1.9;">
+            <div class="article-body">
               <p>
                 Selamat kepada Rifki, siswa SDN Kiduldalem I Bangil, yang berhasil meraih Juara 2 Karate pada ajang Piala KONI Kabupaten Pasuruan. Prestasi ini menjadi bukti kerja keras, kedisiplinan, dan konsistensi Rifki dalam berlatih, sekaligus hasil dukungan pelatih, orang tua, serta sekolah yang selalu memberi motivasi. Di atas tatami, Rifki menunjukkan teknik yang rapi, fokus yang kuat, dan sportivitas tinggi—mewakili karakter pelajar tangguh yang pantang menyerah. Semoga capaian ini menjadi pemantik semangat untuk terus meningkatkan kemampuan, membuka peluang prestasi di tingkat yang lebih tinggi, dan menginspirasi teman-teman lain untuk aktif berolahraga, menjaga kesehatan, serta berani bermimpi dan berjuang mewujudkannya.
 
