--- a/kegiatan/juara-pildacil-mtq.html
+++ b/kegiatan/juara-pildacil-mtq.html
@@ -13,7 +13,8 @@
     <header class="site-header" id="top">
       <div class="container nav-wrap">
         <a href="../index.html#home" class="logo" aria-label="Beranda SDN KIDULDALEM I BANGIL">
-          <img class="logo-img" src="../assets/img/logosd.png" alt="SDN KIDULDALEM I BANGIL" onerror="this.onerror=null;this.src='../assets/img/placeholder.svg';" />
+          <img class="logo-img" src="../assets/img/logosd.png" alt="Logo SDN KIDULDALEM I BANGIL" onerror="this.onerror=null;this.src='../assets/img/placeholder.svg';" />
+          <span class="logo-text">SDN KIDULDALEM I BANGIL</span>
         </a>
         <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Buka menu">
           <span class="bar"></span><span class="bar"></span><span class="bar"></span>
@@ -50,7 +51,7 @@
               <img src="../assets/img/juarapildacil.jpg" onerror="this.onerror=null;this.src='../assets/img/placeholder.svg';" alt="Foto siswa peraih Juara 1 Harapan Pildacil dan MTQ Festival PAI se‑Kabupaten Pasuruan" style="display:block; width:70%; max-width:360px; height:auto; border:1px solid var(--border); border-radius:.75rem; background:var(--surface);" />
             </figure>
 
-            <div style="font-size:1.15rem; line-height:1.9;">
+            <div class="article-body">
               <p>
                Selamat dan syukur alhamdulillah, kontingen SDN Kiduldalem I Bangil berhasil meraih <strong>Juara Harapan 1</strong> pada cabang <strong>Pildacil</strong> dan <strong>MTQ</strong> di <strong>Festival PAI se-Kabupaten Pasuruan</strong>. Capaian ini lahir dari latihan yang konsisten—mulai dari pemantapan materi dakwah, pelafalan dan intonasi, hingga penguatan kepercayaan diri di panggung—serta pembinaan tahsin, tajwid, dan adab tilawah yang tekun. Terima kasih kepada guru PAI, pelatih, orang tua, dan seluruh warga sekolah atas doa dan dukungannya. Semoga prestasi ini menambah motivasi untuk terus meningkatkan kualitas bacaan Al-Qur’an, kemampuan retorika yang santun, dan akhlak mulia, sekaligus menjadi inspirasi bagi teman-teman lain untuk berani berprestasi.
 
@@ -69,4 +70,3 @@
     <script src="../assets/js/main.js"></script>
   </body>
   </html>
-
