--- a/ekstrakurikuler/teater.html
+++ b/ekstrakurikuler/teater.html
@@ -25,7 +25,8 @@
     <header class="site-header" id="top">
       <div class="container nav-wrap">
         <a href="../index.html#home" class="logo" aria-label="Beranda SDN KIDULDALEM I BANGIL">
-          <img class="logo-img" src="../assets/img/logosd.png" alt="SDN KIDULDALEM I BANGIL" onerror="this.onerror=null;this.src='../assets/img/placeholder.svg';" />
+          <img class="logo-img" src="../assets/img/logosd.png" alt="Logo SDN KIDULDALEM I BANGIL" onerror="this.onerror=null;this.src='../assets/img/placeholder.svg';" />
+          <span class="logo-text">SDN KIDULDALEM I BANGIL</span>
         </a>
         <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Buka menu">
           <span class="bar"></span>
